[gd_scene load_steps=14 format=3 uid="uid://c3my4yp820oik"]

[ext_resource type="Script" path="res://Npcs/npc_1.gd" id="1_deu6d"]
[ext_resource type="PackedScene" uid="uid://r540mg28mrr7" path="res://Assets/Models/Npc1/FinalG.glb" id="1_ogbdf"]
[ext_resource type="PackedScene" uid="uid://gql6q22v51bc" path="res://Assets/HUD_Player/misionPedir.glb" id="3_4b4ue"]
[ext_resource type="PackedScene" uid="uid://bdkeg44lps7sl" path="res://Assets/HUD_Player/misionEntregar.glb" id="4_2uel0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8xtll"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ui1at"]
animation = &"idle1"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_xp48k"]
input_0/name = "false"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "true"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_4h8k0"]
input_0/name = "talk1"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "talk2"
input_1/auto_advance = false
input_1/reset = true
input_2/name = "thank"
input_2/auto_advance = false
input_2/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_su1m3"]
animation = &"talk1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ppq7l"]
animation = &"talk2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8cbdn"]
animation = &"thank1"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_bf8nq"]
graph_offset = Vector2(-522, 93.6)
nodes/idle/node = SubResource("AnimationNodeAnimation_ui1at")
nodes/idle/position = Vector2(-120, 80)
nodes/initiate/node = SubResource("AnimationNodeTransition_xp48k")
nodes/initiate/position = Vector2(100, 140)
nodes/talk/node = SubResource("AnimationNodeTransition_4h8k0")
nodes/talk/position = Vector2(-80, 300)
nodes/talk1/node = SubResource("AnimationNodeAnimation_su1m3")
nodes/talk1/position = Vector2(-320, 220)
nodes/talk2/node = SubResource("AnimationNodeAnimation_ppq7l")
nodes/talk2/position = Vector2(-320, 340)
nodes/thank/node = SubResource("AnimationNodeAnimation_8cbdn")
nodes/thank/position = Vector2(-320, 480)
node_connections = [&"output", 0, &"initiate", &"initiate", 0, &"idle", &"initiate", 1, &"talk", &"talk", 0, &"talk1", &"talk", 1, &"talk2", &"talk", 2, &"thank"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yy34u"]

[node name="Npc1" type="StaticBody3D"]
script = ExtResource("1_deu6d")

[node name="FinalG" parent="." instance=ExtResource("1_ogbdf")]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0, 0)

[node name="Skeleton3D" parent="FinalG/Armature" index="0"]
bones/0/position = Vector3(-0.107946, 1.12999, -0.00345017)
bones/0/rotation = Quaternion(-0.0103599, 0.0115868, 0.00859743, 0.999842)
bones/1/rotation = Quaternion(-0.00325335, -0.00389886, 0.00382741, 0.99998)
bones/2/rotation = Quaternion(0.00550975, -0.027913, 0.00953979, 0.99955)
bones/3/rotation = Quaternion(0.00513328, -0.0277718, 0.00978414, 0.999553)
bones/4/rotation = Quaternion(0.0139211, 0.0122533, -0.0258039, 0.999495)
bones/5/rotation = Quaternion(0.0917494, -0.0250485, 0.0186512, 0.995292)
bones/7/rotation = Quaternion(-0.540761, -0.426467, 0.624178, -0.368924)
bones/8/rotation = Quaternion(0.430332, 0.146583, 0.0826913, 0.886843)
bones/9/rotation = Quaternion(-1.1283e-06, -4.58095e-06, 0.315946, 0.948777)
bones/10/rotation = Quaternion(0.152029, 0.104799, -0.211775, 0.959717)
bones/11/rotation = Quaternion(0.132569, -0.0422318, 0.09173, 0.986016)
bones/12/rotation = Quaternion(0.00681707, -0.00581078, -0.0523227, 0.99859)
bones/13/rotation = Quaternion(-0.0248368, 0.00788434, 0.160334, 0.986719)
bones/15/rotation = Quaternion(0.172349, 0.0117094, 0.0566633, 0.983335)
bones/16/rotation = Quaternion(0.278887, -0.000162816, -0.0515854, 0.958937)
bones/17/rotation = Quaternion(0.131959, 0.00292757, -0.00929936, 0.991207)
bones/19/rotation = Quaternion(0.220237, 0.00744922, 0.0422655, 0.974502)
bones/20/rotation = Quaternion(0.186252, 0.000813121, -0.0368408, 0.981811)
bones/21/rotation = Quaternion(0.123818, 0.00113361, -0.0151818, 0.992188)
bones/23/rotation = Quaternion(0.263524, -0.00124834, 0.0215303, 0.964412)
bones/24/rotation = Quaternion(0.138721, -0.0010376, 0.00248934, 0.990328)
bones/25/rotation = Quaternion(0.092742, -0.0016051, -0.0133424, 0.9956)
bones/27/rotation = Quaternion(0.361054, 0.0210926, -0.0590232, 0.930436)
bones/28/rotation = Quaternion(0.17807, 0.003981, 0.0768016, 0.981008)
bones/29/rotation = Quaternion(0.0663729, -0.00332696, -0.00838453, 0.997754)
bones/31/rotation = Quaternion(0.571128, -0.434369, 0.53542, 0.445491)
bones/32/rotation = Quaternion(0.450402, -0.172073, -0.139216, 0.864955)
bones/33/rotation = Quaternion(4.42058e-07, -2.3921e-06, -0.299933, 0.95396)
bones/34/rotation = Quaternion(0.0482537, 0.00385629, 0.212751, 0.975907)
bones/35/rotation = Quaternion(0.142174, -0.0897697, 0.00718153, 0.985737)
bones/36/rotation = Quaternion(0.0224057, -0.0319169, -0.0654668, 0.997092)
bones/37/rotation = Quaternion(-0.0296389, -0.00617895, -0.134806, 0.990409)
bones/39/rotation = Quaternion(0.0308167, -0.00933956, -0.0308382, 0.999006)
bones/40/rotation = Quaternion(0.363721, 0.000665863, 0.0664664, 0.929133)
bones/41/rotation = Quaternion(0.0938675, -0.00221777, 0.00953742, 0.995537)
bones/43/rotation = Quaternion(0.0828136, -0.00657448, -0.00554347, 0.996528)
bones/44/rotation = Quaternion(0.298126, -8.37501e-05, 0.0499574, 0.953218)
bones/45/rotation = Quaternion(0.0737818, 0.00866987, 0.0085459, 0.9972)
bones/47/rotation = Quaternion(0.191859, 0.00294643, 0.001834, 0.981416)
bones/48/rotation = Quaternion(0.235725, 0.000335654, 0.0182022, 0.971649)
bones/49/rotation = Quaternion(0.0854016, 0.0121668, 0.0107749, 0.996214)
bones/51/rotation = Quaternion(0.276266, -0.0174358, 0.0535468, 0.95943)
bones/52/rotation = Quaternion(0.185064, 0.00280593, -0.0352424, 0.98209)
bones/53/rotation = Quaternion(0.0876469, 0.00263957, 0.00608616, 0.99613)
bones/55/rotation = Quaternion(0.0846063, 0.0965136, 0.989706, -0.0633107)
bones/56/rotation = Quaternion(-0.217272, 5.39662e-06, 1.15702e-06, 0.976111)
bones/57/rotation = Quaternion(0.49424, -0.103892, -0.0456566, 0.861887)
bones/58/rotation = Quaternion(0.299898, 0.0649673, -0.0203566, 0.951539)
bones/60/rotation = Quaternion(-0.113337, 0.122954, 0.985745, 0.0185638)
bones/61/rotation = Quaternion(-0.260513, 1.18173e-05, 3.44544e-06, 0.96547)
bones/62/rotation = Quaternion(0.514573, 0.136945, -0.0308416, 0.845878)
bones/63/rotation = Quaternion(0.303269, -0.0657756, 0.0209887, 0.9504)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.962213, 0)
shape = SubResource("CapsuleShape3D_8xtll")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_bf8nq")
anim_player = NodePath("../FinalG/AnimationPlayer")
active = true
parameters/initiate/current_state = "false"
parameters/initiate/transition_request = ""
parameters/initiate/current_index = 0
parameters/talk/current_state = ""
parameters/talk/transition_request = ""
parameters/talk/current_index = -1

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 1.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_yy34u")

[node name="misionesTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="nombreNPC" type="Label3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 2.5, 0)
modulate = Color(0, 0, 0, 1)
outline_modulate = Color(1, 1, 1, 1)
text = "Juan Maldonado"
font_size = 40

[node name="misionEntregar" parent="." instance=ExtResource("3_4b4ue")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 3, 0)

[node name="misionPedir" parent="." instance=ExtResource("4_2uel0")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 3, 0)

[node name="interactuarL" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.22662, 2.07592, 0)
text = "(E) Interactuar"
font_size = 45

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="misionesTimer" to="." method="_on_misiones_timer_timeout"]

[editable path="FinalG"]
